# hbook

./: build_docs.sh  ch7.hs  index.adoc
ch1/: ch1.adoc
ch10/: ch10.adoc  ch10.hs  db.hs  fibs.hs
ch11/: caesar.hs  ch11.adoc  ch11.hs  phone.hs  razor.hs  tree.hs  vehicles.hs  vigenere.hs
ch12/: ch12.adoc  ch12.hs  either.hs  maybe.hs
ch13/: Person.hs  ch13.adoc  ch13.hs
ch13/guess/: guess.cabal  stack.yaml
ch13/guess/src/: Main.hs  Spec.hs
ch14/: WordNumsTest.hs  ch14.adoc  ch14.hs
ch14/addit/: README.md  addit.cabal
ch14/addit/test/: Spec.hs
ch14/morse/: morse.cabal
ch14/morse/app/: Main.hs
ch14/morse/src/: Morse.hs
ch14/morse/test/: Spec.hs
ch15/: ch15.adoc  ch15.hs  chexer.hs  semig.hs
ch16/: ch16.adoc  ch16.hs
ch17/: ch17.adoc  ch17.hs
ch17/apply/: .gitignore  ChangeLog.md  package.yaml
ch17/apply/src/: BadMonoid.hs  List.hs  Typez.hs  Ztanz.hs
ch17/apply/test/: ApplTest.hs  Spec.hs
ch18/: ch18.adoc  ch18.hs
ch2/: ch2.adoc  ch2.hs
ch20/: ch20.adoc  ch20.hs
ch21/: ch21.adoc  ch21.hs
ch22/: ReaderPractice.hs  Warmup.hs  bip.hs  ch22.adoc  ch22.hs
ch23/: FizzBuzz.hs  RandomExample.hs  ch23.adoc  ch23.hs
ch24/: ch24.adoc
ch24/parx/: .gitignore  ChangeLog.md  README.md  package.yaml
ch24/parx/src/: AltParsing.hs  IPv4Parser.hs  LearnParsers.hs  LogParser.hs  Marshalling.hs  PhoneParser.hs  PositiveIntegers.hs  QuasiModo.hs  SemVer.hs  log.txt
ch24/parx/src/Data/: Ini.hs
ch24/parx/src/Text/: Fractions.hs
ch24/parx/test/: LogParserSpec.hs  PhoneParserSpec.hs  SemVerSpec.hs
ch24/parx/test/Data/: IniSpec.hs
ch3/: ch3.adoc  exercises.hs  print2.hs  print3flipped.hs  reverse.hs
ch4/: ch4.adoc  ch4.hs
ch5/: arith3broken.hs  ch5.adoc  ch5.hs  compile.hs  detypes.hs  sing.hs  tkd.hs
ch6/: ch6.adoc  ch6EqInstances.hs  exercises.hs
ch7/: arith4.hs  ch7.adoc  ch7.hs
ch8/: ch8.adoc  ch8.hs  intermission.hs  numswords.hs
ch9/: ch9.adoc  ch9.hs  ciper.hs  enumfromto.hs  poemlines.hs
highlight/: highlight.min.js
