name:                guess
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              abinr
maintainer:          abinr
copyright:           2017 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable guess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , containers
